# OneStopAI

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: main.py
core/: __init__.py  agent.py  conversation_memory.py  conversation_state.py  db.py  embeddings.py  google_drive.py  ingestion.py  llm.py  repository.py  retrieval.py  router.py  schemas.py  settings.py  storage.py  tools.py  vector_store.py
frontend/: app.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/agentic_rag_chunks/0/: newest_clocks.json
qdrant_storage/collections/agentic_rag_chunks/0/segments/2fa51d20-c6d7-44d7-9d72-24895e4de33b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/agentic_rag_chunks/0/segments/564d77ef-78fd-4356-8c87-e5114757ffd5/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/agentic_rag_chunks/0/segments/b94fadd1-62e0-4961-a806-1cc089dc6eea/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/agentic_rag_chunks/0/segments/d905abe0-5b53-4a4d-a968-f81c7cce155b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/agentic_rag_chunks_baai_bge_base_en_v1_5_3c578377/0/: newest_clocks.json  replica_state.json
sample_files/: complex_multi_sheet_sales_messy.xlsx
scripts/: run_backend.sh  run_frontend.sh  setup_macos.sh
tests/: test_agent.py  test_conversation_state.py  test_ingestion.py  test_retrieval.py  test_router.py  test_schemas.py  test_storage.py  test_tools.py
(+8 files in other folders)
