[project]
name = "agentic-rag-chatbot"
version = "0.1.0"
description = "Production-shaped Streamlit and FastAPI chatbot with agentic RAG, routing, OCR, Excel intelligence, and explainable answers."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "streamlit>=1.38.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "redis>=5.0.8",
  "qdrant-client>=1.11.0",
  "sentence-transformers>=3.0.1",
  "rank-bm25>=0.2.2",
  "langgraph>=0.2.22",
  "langchain-core>=0.3.0",
  "groq>=0.9.0",
  "pandas>=2.2.2",
  "openpyxl>=3.1.5",
  "python-pptx>=1.0.2",
  "duckdb>=1.0.0",
  "pymupdf>=1.24.9",
  "pdfplumber>=0.11.4",
  "pytesseract>=0.3.13",
  "opencv-python-headless>=4.10.0.84",
  "pillow>=10.4.0",
  "numpy>=1.26.4",
  "python-multipart>=0.0.9",
  "aiofiles>=24.1.0",
  "google-api-python-client>=2.140.0",
  "google-auth>=2.33.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
